[gd_scene load_steps=7 format=3 uid="uid://dobipyixkn2og"]

[ext_resource type="Script" uid="uid://l042bqq7n7rm" path="res://ui/power_charge/power_charge_menu/power_charge_menu.gd" id="1_f8c1y"]
[ext_resource type="Script" uid="uid://b1iyuntwrd4b7" path="res://ui/power_charge/power_charge_menu/power_charge_option_data.gd" id="2_l0x1s"]
[ext_resource type="Theme" uid="uid://b6sbn7efkckjc" path="res://assets/themes/main.tres" id="2_vvxfy"]
[ext_resource type="Texture2D" uid="uid://b1rnqeppkagtg" path="res://ui/power_charge/slots/slot_full.png" id="4_nohid"]

[sub_resource type="Resource" id="Resource_0h05h"]
script = ExtResource("2_l0x1s")
label = "Acceleration"
default_value = 3
metadata/_custom_type_script = "uid://b1iyuntwrd4b7"

[sub_resource type="Resource" id="Resource_06nvy"]
script = ExtResource("2_l0x1s")
label = "Max Speed"
default_value = 3
metadata/_custom_type_script = "uid://b1iyuntwrd4b7"

[node name="PowerChargeMenu" type="VBoxContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("1_f8c1y")
label = "Player"
options = Array[ExtResource("2_l0x1s")]([SubResource("Resource_0h05h"), SubResource("Resource_06nvy")])
metadata/_custom_type_script = "uid://l042bqq7n7rm"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_vvxfy")
text = "Player"

[node name="PowerChargesCount" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_vvxfy")
text = "6"

[node name="PowerCharge" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(48, 27)
layout_mode = 2
texture = ExtResource("4_nohid")
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="OptionsParent" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
